--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,49 @@
 :root {
-  ---color-background: #201e1c;
+  --color-background: #201e1c;
+  --header-color: #191716;
   --text-color: white;
 }
 
 * {
   margin: 0;
   padding: 0;
-  background-color: var(---color-background);
-  color: var(--text-color);
   font-family: "Reddit Mono", monospace;
+}
+
+html,
+body {
+  background-color: var(--color-background);
+  color: var(--text-color);
+}
+
+/* general */
+a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+/* header */
+header {
+  width: 100%;
+  height: 140px;
+  display: flex;
+}
+.header-section {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--header-color);
+}
+
+.header-section-two {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  margin-right: 2rem;
+}
+
+.img-logo {
+  width: 14rem;
+  height: 100%;
 }
