--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 :root {
-  --color-background: #201e1c;
-  --header-color: #191716;
+  --color-background: #070707;
+  --header-color: #000;
   --text-color: white;
 }
 
 * {
   margin: 0;
   padding: 0;
-  font-family: "Reddit Mono", monospace;
+  font-family: "Oswald", sans-serif;
 }
 
 html,
