--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,12 @@ main {
   margin: 6rem;
 }
 
+.title-projects {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 4rem;
+}
+
 .project-miniatures {
   display: grid;
   justify-items: center;
@@ -78,7 +84,16 @@ main {
   background-size: cover;
 }
 
-.title-projects {
+/* footer */
+footer {
+  grid-area: l-f;
   text-align: center;
-  font-size: 1.5rem;
+  height: 40px;
+  font-weight: 700;
+  padding-top: 10px;
+  margin: 30px 0 20px 0;
+}
+
+footer p {
+  font-size: 18px;
 }
