--- a/css/styles.css
+++ b/css/styles.css
@@ -53,12 +53,41 @@ header {
 
 main {
   margin: 6rem;
+  margin-top: 0;
 }
+
+/* about me */
+
+.about-me {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  min-height: 40vh;
+  margin-top: 4rem;
+  border-bottom: 2px solid #2e2e2e;
+}
+
+.about-me img {
+  width: 200px;
+  border-radius: 100%;
+  display: flex;
+}
+
+.presentation {
+  padding-left: 4rem;
+}
+
+.presentation h2 {
+  font-size: 2rem;
+}
+
+/* projects */
 
 .title-projects {
   text-align: center;
   font-size: 1.5rem;
   margin-bottom: 4rem;
+  margin-top: 4rem;
 }
 
 .project-miniatures {
@@ -102,6 +131,7 @@ main {
 }
 
 /* footer */
+
 footer {
   grid-area: l-f;
   text-align: center;
