--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,8 @@ footer p {
   align-content: center;
   text-align: center;
   min-height: 20vh;
+  margin-top: 4rem;
+  border-bottom: 2px solid #2e2e2e;
 }
 
 .project-info {
